P3_MARCO_GARCIA_PABLO_ROIG/tests/valid/05_control_flow.lava
int i = 0;
do {
  i = i + 1;
} while (i < 3);
while (i < 5) {
  if (i == 4) {
    break;
  }
  i = i + 1;
}
