P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/05_if_non_boolean.lava
int x = 5;
if (x) {
    print('Y');
}
